# rustzen-core

./: AGENTS.md  Cargo.toml  README.md  justfile
.github/workflows/: check.yml
crates/rz-cli/: Cargo.toml
crates/rz-cli/src/: lib.rs
crates/rz-config/: Cargo.toml
crates/rz-config/src/: lib.rs
crates/rz-core/: Cargo.toml
crates/rz-core/src/: deploy_artifact.rs  lib.rs  logging.rs  role_policy.rs  sqlite_maintenance.rs  sqlite_query.rs
crates/rz-fs/: Cargo.toml
crates/rz-fs/src/: lib.rs
crates/rz-platform/: Cargo.toml
crates/rz-platform/src/: lib.rs
docs/: standards.md
