[workspace]
members = [
    "crates/rz-core",
    "crates/rz-cli",
    "crates/rz-config",
    "crates/rz-fs",
    "crates/rz-platform",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/rustzen/rustzen-core"
homepage = "https://github.com/rustzen/rustzen-core"
rust-version = "1.94"
authors = ["Bruce Dai <bruce@idaibin.dev>", "Rustzen Contributors"]

[workspace.dependencies]
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9.0", default-features = false, features = ["sqlite", "runtime-tokio", "migrate"] }
thiserror = "2"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2.5"
