[package]
name = "rz-config"
version = "0.1.0"
description = "Shared Rustzen runtime layout and environment configuration helpers."
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
