[package]
name = "rz-core"
version = "0.1.0"
description = "Shared Rustzen core primitives: API envelopes, errors, hashing, and SQLite helpers."
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
