[package]
name = "rz-core"
version = "0.1.0"
description = "Shared Rustzen core primitives: API envelopes, errors, hashing, SQLite, maintenance, and logging helpers."
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
authors.workspace = true

[features]
default = ["logging", "sqlite"]
logging = ["dep:tracing", "dep:tracing-subscriber"]
sqlite = ["dep:sqlx"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, optional = true }
thiserror.workspace = true
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
