[package]
name = "rz-core"
version = "0.1.0"
description = "Shared Rustzen core primitives: API envelopes, errors, hashing, SQLite, maintenance, and logging helpers."
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
authors.workspace = true

[features]
default = ["logging", "sqlite"]
deploy = ["dep:ed25519-dalek", "dep:sha2", "dep:zip"]
logging = ["dep:chrono", "dep:tracing", "dep:tracing-appender", "dep:tracing-subscriber"]
sqlite = ["dep:sqlx"]

[dependencies]
chrono = { workspace = true, optional = true }
ed25519-dalek = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sha2 = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
thiserror.workspace = true
tracing = { workspace = true, optional = true }
tracing-appender = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
zip = { workspace = true, optional = true }
